@@ -1,3 +1,7 @@
+2008-09-01 Frank Nägler  <typo3@naegler.net>
+
+	* added getTypoScriptConfiguration to tx_community_ApplicationManager
+
 2008-08-31 Ingo Renner  <ingo@typo3.org>
 
 	* added the privacy settings view to the privacy application
